# parma-analytics

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .sqlfluff  Dockerfile  Makefile  README.md  docker-compose-prod.yaml  docker-compose.yml  environment-prod.yml  environment.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/workflows/: chore.yml  ci.yml  deploy.yml  release.yml  tag-major.yml
docs/: ADDING_DATASOURCES.md
parma_analytics/: __init__.py
parma_analytics/analytics/: __init__.py
parma_analytics/api/: README.md  __init__.py  main.py
parma_analytics/bl/: __init__.py  company_bll.py  company_data_source_bll.py  company_data_source_identifiers_bll.py  create_company_bll.py  data_source_helper.py  fetch_crm_companies.py  generate_report.py  mining_module_manager.py  mining_trigger_payloads.py  register_measurement_values.py  schedule_manager.py  scraping_model.py  source_measurement_bll.py  test_sentiment_analysis.py  trigger_datasources.py
parma_analytics/db/: __init__.py  populate_notification_rule.py  source_measurement_rules.json
parma_analytics/firebase/: initialize.py
parma_analytics/reporting/: __init__.py  db_operations.py  generate_charts.py  generate_html.py  generate_pdf.py  generate_report.py  news_comparison_engine.py  notification_rule_helper.py  notification_service_manager.py  report.py  report_template.html  retrieve_report.py  retrieve_report_firebase.py  retrieve_reports.py  send_reports.py
parma_analytics/sourcing/: __init__.py
parma_analytics/storage/: README.md  __init__.py  report_storage.py
parma_analytics/utils/: jwt_handler.py  uuid.py
terraform/: Makefile
terraform/dev/: .terraform.lock.hcl  README.md  main.tf  variables.tf
terraform/module/: database.tf  main.tf  outputs.tf  scheduler.tf  secrets.tf  service.tf  variables.tf
terraform/prod/: .terraform.lock.hcl  main.tf  variables.tf
terraform/staging/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
terraform/state/: main.tf  terraform.tfstate
tests/: dummy.py  test_dummy.py  test_log_level.py
tests/api/: conftest.py  test_crawling_finished.py  test_feed_raw_data.py  test_main.py  test_new_company.py  test_source_measurement.py  test_trigger_datasources.py
tests/bl/: test_data_source_helper.py  test_fetch_crm_companies.py  test_generate_report.py  test_mining_module_manager.py
tests/db/: conftest.py  test_aggregation_functions.py  test_company_data_source_identifiers_query.py  test_company_data_source_query.py  test_company_measurement_query.py  test_database_connection.py  test_measurement_comment_value_query.py  test_measurement_float_value_query.py  test_measurement_int_value_query.py  test_measurement_paragraph_value_query.py  test_measurement_text_value_query.py  test_measurement_value_query.py  test_notification_rule_comparison_engine.py  test_notification_rules.py  test_source_measurement_query.py
tests/reporting/: test_generate_html.py  (+2 more)
(+180 files in other folders)
