[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]

[tool.setuptools_scm]
version_scheme = "post-release"

[project]
name = "parma-analytics"
description = "ParmaAI analytics repository providing data processing and inference."
readme = "README.md"
dynamic = ["version"]
authors = [
  {name = "Robin Holzinger", email = "robin.holzinger@tum.de"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"

[project.urls]
repository = "https://github.com/la-famiglia-jst2324/parma-analytics"

[tool.setuptools.packages.find]
include = ["parma_analytics"]
namespaces = false

[project.scripts]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
select = ["F", "E", "W", "I", "N", "UP", "D", "PL"]
target-version = "py311"
ignore = [
  "D107", # disable missing docstring errors for __init__ files
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
# "*" = ["D212"] # Multi-line docstrings don't have to start at the first line
"tests/*" = ["D100", "D103", "D104"] # disable missing docstring errors for tests

[tool.ruff.lint.isort]
case-sensitive = true
detect-same-package = true

[tool.mypy]
python_version = '3.11'
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true

[tool.docformatter]
black = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov='parma_analytics' --cov-report xml --color=yes"
